# finbot-research

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
src/finbot_research/: bucket_signal_diagnostics.py  cli.py  config.py  diagnostic_summary.py  feature_label_diagnostics.py  fundamental_research_v0.py  io.py  metadata.py  price_strength_equity_curve_backtest.py  price_strength_equity_curve_robustness.py  price_strength_holding_period_simulation.py  price_strength_horizon_sensitivity.py  price_strength_portfolio_simulation.py  price_strength_rebalance_feasibility.py  price_strength_scorecard.py  price_strength_scorecard_v1.py  price_strength_turnover_cost_efficiency.py  schemas.py  validation.py
tests/: test_bucket_signal_diagnostics.py  test_cli.py  test_diagnostic_summary.py  test_feature_label_diagnostics.py  test_fundamental_research_v0.py  test_io.py  test_metadata.py  test_price_strength_equity_curve_backtest.py  test_price_strength_equity_curve_robustness.py  test_price_strength_holding_period_simulation.py  test_price_strength_horizon_sensitivity.py  test_price_strength_portfolio_simulation.py  test_price_strength_rebalance_feasibility.py  test_price_strength_scorecard.py  test_price_strength_scorecard_v1.py  test_price_strength_turnover_cost_efficiency.py  test_validation.py
